# Pushin

./: .gitignore  CLAUDE.md  CONTEXT_ENGINE_PLAN.md  DEVLOG.md  HANDOFF.md  README.md  ROADMAP.md  SECURITY_TEST_PLAN.md  dev.bat  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: pages.yml  release.yml  test.yml
docs/: index.md
docs/.vitepress/: .gitignore  config.ts
docs/.vitepress/theme/: style.css
docs/developer-guide/: architecture.md  backend.md  frontend.md  ipc.md  parser-scheduler.md  testing-releases.md
docs/getting-started/: ai-setup.md  index.md  prerequisites.md  releases.md  run-from-source.md
docs/user-guide/: booking.md  briefing.md  calendar.md  focus.md  google-calendar.md  habits.md  inbox.md  labels.md  meeting-companion.md  notes-vault.md  people.md  planning.md  tasks-projects.md  troubleshooting.md
finetune/: PLAN.md  eval_grpo.sh  export.sh  overnight.sh  requirements.txt  train.py  train_grpo.py
finetune/datagen/: main.rs  templates.rs
finetune/grpo/: main.rs
src/: App.integration.test.tsx  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_google.sql  0003_habits.sql  0004_habit_duration.sql  0005_project_archive.sql  0006_notes.sql  0007_habit_cadence.sql  0008_pages.sql  0009_brain.sql  0010_labels.sql  0011_booking_public.sql  0012_context_index.sql  0013_people.sql  0014_focus_sessions.sql  0016_vault_files.sql  0017_habit_preferred_time.sql  0018_note_origin.sql
src-tauri/src/: booking.rs  booking_server.rs  briefing.rs  commands.rs  context.rs  db.rs  habits.rs  hermes.rs  lib.rs  llm.rs  main.rs  meeting.rs  model.rs  model_manager.rs  parser.rs  schedule_service.rs  scheduler.rs  secrets.rs  vault.rs
src-tauri/src/calendar/: google.rs  local.rs  mod.rs
src-tauri/src/sync/: changeset.rs  engine.rs  hlc.rs  identity.rs  mod.rs  protocol.rs  schema.rs  state.rs  transport.rs
src-tauri/tests/: llm_eval.rs  model_battery.rs
src/components/: AiMemory.tsx  BriefingCard.tsx  CalendarLabelControls.tsx  CalendarLegend.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ConflictBanner.tsx  DevicesSync.tsx  InferenceSetup.tsx  LabelPicker.tsx  MobileShell.tsx  OnboardingModal.tsx  OpeningAnimation.tsx  PageEditor.test.tsx  PageEditor.tsx  Personalization.tsx  QuickCapture.test.tsx  QuickCapture.tsx  Sidebar.test.tsx  Sidebar.tsx  TitleBar.test.tsx  TitleBar.tsx  TopBar.tsx  UpdateBanner.test.tsx  UpdateBanner.tsx  VaultTree.test.tsx  VaultTree.tsx  ViewToggle.tsx  WelcomeBack.tsx  WelcomeGuide.tsx  WhatsNew.tsx
src/lib/: autoLabels.test.ts  autoLabels.ts  blocks.test.ts  blocks.ts  bridgeContract.test.ts  editorSchema.tsx  import.test.ts  import.ts  ipc.ts  ipcContract.test.ts  time.test.ts  time.ts  updates.ts  useHotkeys.ts  useIsMobile.ts  vaultExport.ts  vaultImport.ts
src/panes/: BookingPane.test.tsx  BookingPane.tsx  CalendarPane.tsx  ChatPane.test.tsx  ChatPane.tsx  GraphPane.tsx  HabitsPane.tsx  HermesPane.tsx  InboxPane.test.tsx  InboxPane.tsx  LabelPane.tsx  MonthPane.tsx  PeoplePane.tsx  ProjectsPane.tsx  SettingsPane.tsx  TaskListPane.test.tsx  TaskListPane.tsx  VaultPane.tsx
src/state/: store.test.ts  store.ts
tests/e2e/: _capture.spec.ts  _mockBridge.ts  smoke.spec.ts
