[package]
name = "pushin"
version = "0.1.1"
description = "Pushin — local-AI calendar (Motion-style, on-device)"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pushin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# DB: bundled SQLite, owned entirely by the Rust core
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
# Dates resolved in Rust, never trusted from the LLM
chrono = { version = "0.4", features = ["serde"] }
# HTTP: llama-server client + streaming model download
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
# Model integrity verification
sha2 = "0.10"
hex = "0.4"
# Cross-platform unpacking of the prebuilt llama.cpp engine (Windows ships .zip; macOS &
# Linux ship .tar.gz which we hand to the system `tar`). deflate-only to stay lean.
zip = { version = "2", default-features = false, features = ["deflate"] }
# Google OAuth (PKCE) — base64url challenge + random verifier
base64 = "0.22"
getrandom = "0.2"
# Error handling
anyhow = "1"
thiserror = "2"
# Async sleep for inference-server readiness polling
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
# The LLM-evaluation harness (`tests/llm_eval.rs`) is a separate crate, so it needs its own async
# runtime + HTTP client. Versions match the lib's so the dependency build is shared, not duplicated.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4" }
