[package]
name = "pushin"
version = "0.4.0"
description = "Pushin — local-AI calendar (Motion-style, on-device)"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pushin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Native folder picker for the vault importer (Markdown / Obsidian).
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# DB: bundled SQLite, owned entirely by the Rust core. `functions` registers the sync_capturing()
# SQL function the device-sync change-capture triggers call.
rusqlite = { version = "0.32", features = ["bundled", "chrono", "functions"] }
# Dates resolved in Rust, never trusted from the LLM
chrono = { version = "0.4", features = ["serde"] }
# HTTP: llama-server client + streaming model download
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
# Model integrity verification
sha2 = "0.10"
hex = "0.4"
# Cross-platform unpacking of the prebuilt llama.cpp engine (Windows ships .zip; macOS &
# Linux ship .tar.gz which we hand to the system `tar`). deflate-only to stay lean.
zip = { version = "2", default-features = false, features = ["deflate"] }
# Google OAuth (PKCE) — base64url challenge + random verifier
base64 = "0.22"
getrandom = "0.2"
# OS keychain (macOS Keychain / Windows Credential Manager / Linux Secret Service) so Google
# OAuth tokens are never persisted in plaintext SQLite.
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
# Error handling
anyhow = "1"
thiserror = "2"
# Async runtime: inference-server readiness polling + the device-sync engine (io-util for the
# length-prefixed wire protocol, sync for channels, net/rt for the Iroh transport).
tokio = { version = "1", features = ["time", "io-util", "sync", "rt", "rt-multi-thread", "macros", "net"] }
# Iroh: pure-Rust QUIC peer-to-peer mesh (NAT hole-punching + relay fallback). The "bundled tailnet".
iroh = "0.90"
# Base32 for shareable pairing tickets (NodeAddr + mesh secret), QR-friendly + case-insensitive.
data-encoding = "2"

[dev-dependencies]
# The LLM-evaluation harness (`tests/llm_eval.rs`) is a separate crate, so it needs its own async
# runtime + HTTP client. Versions match the lib's so the dependency build is shared, not duplicated.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4" }
# Integration tests mock the OpenAI-compatible inference/embeddings servers + the Google Calendar API.
httpmock = "0.7"
tempfile = "3"

# Fine-tuning data generator (Stage 1–4 of finetune/PLAN.md). An *example*, not a bin, so it links
# the lib and reuses dev-dependencies (full tokio + reqwest) without bloating the shipped app's deps.
# Run: `cargo run --example datagen -- --dry-run` (offline) or against a teacher llama-server.
[[example]]
name = "datagen"
path = "../finetune/datagen/main.rs"

# GRPO reward scorer + prompt dumper (path B). Reuses the datagen templates as verifiable rewards.
[[example]]
name = "grpo"
path = "../finetune/grpo/main.rs"
